Webinars/Webinar5/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-webapi-service
  namespace: webinar5
  labels:
    app: myapp-webapi
spec:
  type: ClusterIP  # Tipo padrão (pode omitir)
  selector:
    app: myapp-webapi  # Seleciona pods com este label
  ports:
  - name: http
    protocol: TCP
    port: 80          # Porta do Service
    targetPort: 8080  # Porta do container
