Webinars/Webinar5/service-web-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-webapp-service
  namespace: webinar5
  labels:
    app: myapp-webapp
spec:
  type: ClusterIP  # Changed from NodePort - Ingress will handle external access
  selector:
    app: myapp-webapp
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
